--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "author": "xiaox.TaoPeng",
   "license": "MIT",
   "dependencies": {
-    "vue": "^2.1.10",
-    "vuex": "^2.1.2",
+    "axios": "^0.16.1",
     "element-ui": "^1.2.3",
-    "jquery": "^2.2.4"
+    "iview": "^2.0.0-rc.10",
+    "jquery": "^2.2.4",
+    "vue": "^2.1.10",
+    "vuex": "^2.1.2"
   },
   "devDependencies": {
+    "axios": "^0.16.1",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -31,6 +34,7 @@
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
+    "iview": "^1.0.2",
     "path": "^0.12.7",
     "requirejs": "^2.3.3",
     "style-loader": "^0.13.1",
